--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -3,6 +3,9 @@ news:
   - title: "One paper was accepted by AISTATS'2026."
     date: "01/2026" 
 
+  - title: "Two papers were accepted by ICLR'2026."
+    date: "01/2026" 
+
   - title: "Two papers were accepted by WWW'2026."
     date: "01/2026" 
 
